CC-252 fix color contrast

--- a/src/ui/layer_bar.css
+++ b/src/ui/layer_bar.css
@@ -150,22 +150,20 @@
 
 .neuroglancer-layer-rainbow-color-value {
   position: relative;
-  border-radius: 50%;
-  height: 10px;
-  width: 10px;
   overflow: hidden;
+  z-index: 1;
 }
 
 .neuroglancer-layer-rainbow-color-value::before {
   content: '';
   position: absolute;
-  top: -17.5%;
-  left: -17.5%;
-  width: 135%;
-  height: 135%;
-  background: conic-gradient(from 0deg, hsl(0, 100%, 50%), hsl(60, 100%, 50%), hsl(120, 100%, 50%), hsl(180, 100%, 50%), hsl(240, 100%, 50%), hsl(300, 100%, 50%), hsl(360, 100%, 50%));
-  filter: blur(1px);
-  transform: scale(1.35);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, #6A1B9A 0%, #283593 25%, #00695C 50%, #2E7D32 75%, #F57F17 100%);
+  z-index: -1;
+  opacity: 0.6;
 }
 
 .neuroglancer-layer-color-value-wrapper.cross .neuroglancer-layer-color-value,
